# rawarray-rust

./: .gitignore  Cargo.toml  README.md
examples/: float16.rs  simple.rs
src/: lib.rs
