[package]
name = "rawarray"
description = "simple file format for retrievably storing n-dimensional arrays"
version = "0.1.2"
authors = ["David S. Smith <david.smith@gmail.com>"]
edition = "2018"
readme = "README.md"
categories = ["science", "mathematics", "encoding", "filesystem", "data-structures"]
homepage = "https://crates.io/crates/rawarray"
repository = "https://github.com/davidssmith/rawarray-rust"
license = "MIT"

[dependencies]
half = "1.4.0"
#itertools = "0.8.2"
itertools-num = "0.1.3"
#microbench = "0.5.0"
ndarray = "0.13.0"
num-traits = "0.2.10"
num-complex = "0.2.3"

#[package.metadata.docs.rs]
#all-features = true

