[package]
name = "rawarray"
description = "simple file format for retrievably storing n-dimensional arrays"
version = "0.1.3"
authors = ["David S. Smith <david.smith@gmail.com>"]
edition = "2021"
readme = "README.md"
categories = ["science", "mathematics", "encoding", "filesystem", "data-structures"]
homepage = "https://crates.io/crates/rawarray"
repository = "https://github.com/davidssmith/rawarray-rust"
license = "MIT"

[dependencies]
argparse = "0.2.2"
half = "2.7.1"
itertools-num = "0.1.3"
ndarray = "0.17.2"
num-traits = "0.2.10"
num-complex = "0.4.6"

#[package.metadata.docs.rs]
#all-features = true

