[package]
name = "rawarray"
description = "simple file format for retrievably storing n-dimensional arrays"
version = "0.1.3"
authors = ["David S. Smith <david.smith@gmail.com>"]
edition = "2021"
readme = "README.md"
categories = ["science", "mathematics", "encoding", "filesystem", "data-structures"]
homepage = "https://crates.io/crates/rawarray"
repository = "https://github.com/davidssmith/rawarray-rust"
license = "MIT"

[dependencies]
half = { version = "2.7.1", optional = true }
ndarray = { version = "0.17.2", optional = true }
num-traits = "0.2.10"
num-complex = { version = "0.4.6", optional = true }

[features]
half = ["dep:half"]
ndarray = ["dep:ndarray"]
num-complex = ["dep:num-complex"]

